Improving User navigation, Home UI, conncting api endpoints